--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         <br>
         <br>
-        <br>
+        <b｢｣｢｣
 
         <div id="rules" class="alert alert-primary" role="alert">
             サーバールール
@@ -156,7 +156,29 @@
                 <br>
                 <br>
                 <span><i><strong>ルール２</strong></i></span>
+                <br>許可なく他人の部屋や家に入らない！
+                <br>リアルでも他人の家に入る際は許可を取りますよね？
+                <br>え...？取りますよね？？？
+                <br>ということでマイクラでも他人の家に入るときは許可を取りましょう！
                 <br>
+                <br>
+                <span><i><strong>ルール３</strong></i></span>
+                <br>公共施設は丁寧に使用する！
+                <br>ワールド内には様々な公共物があります。
+                <br>みんなが使うものなので、次に使う人が困らない使い方をしましょう！
+                <br>(例えば、公共の植林上で木を切ったら必ず苗を植えるなど)
+                <br>
+                <br>
+                <span><i><strong>ルール４</strong></i></span>
+                <br>誰がいつ入っても困らないワールドづくりを！
+                <br>と言われても想像できないと思うので、例を挙げていきます！
+                <br>⓵トラップや装置、建築をした際には所有者がわかるよう看板等を立てる
+                <br>⓶共有の施設や装置を作った際は、使い方をしっかりシェアする
+                <br>⓷みんなが使うエリア(本拠点周辺)で何か行った際には共有する
+                <br>｢ここに建物建てるから整地中です！｣
+                <br>｢ここのチェストは〇〇のためにおいてます！｣
+                <br>｢この施設はメンテ中です～復帰予定は〇〇です！｣などなど...
+                <br>これ何なの？を極力なくしていきましょう！
             </p>
         </span>
         <div id="plugins" class="alert alert-primary" role="alert">
