--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 <body>
     <div class="container">
         <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading">｢猫を愛せ｣攻略ページ</h4>
-            <p>｢猫を愛せ｣に関係する情報をまとめて記載しているページです。確認は気が向いたときにしてください！
-                <br> また、新たに記載してほしい内容はお問い合わせまでお願いします！</p>
+            <h4 class="alert-heading">｢猫を愛せ｣公式ページ</h4>
+            <p>｢猫を愛せ｣に関係する情報をまとめて記載しているページです。確認は気が向いたときにしてください！また、記載してほしい内容はお問い合わせまで！</p>
             <hr>
-            <p class="mb-0">現在のサーバー:Paper 1.19.3    Javaの方は1.19.3で入ってください。</p>
+            <p class="mb-0">現在のサーバー:Paper 1.19.3    プラグインにより1.8.x以上の全バージョンに対応しています。</p>
         </div>
     </div>
     <h2 class="ml-2">猫を愛せ 雑談チャンネルは<a target="_blank" href="https://discord.com/channels/1044690456195387514/1044690456887427165">ここ</a>！</h2>
@@ -53,9 +52,7 @@
     <br>
     <div class="container">
         <section>
-            <div id="overviwe" class="alert alert-primary" role="alert">
-                サーバー概要
-            </div>
+            <h1 id="overviwe">サーバー概要</h1>
             <h4>
                 このサーバーは、三人の管理者と多くのメンバーさんから構成される
                 <br> Java 1.19.3ベースのpaperサーバーです。
@@ -74,9 +71,7 @@
         <br>
 
         <section>
-            <div id="terms of service" class="alert alert-primary" role="alert">
-                サーバー利用規約
-            </div>
+            <h1 id="terms of service">サーバー利用規約</h1>
             <h4>
                 サーバーをメンバーさんが安心・安全に利用できるように
                 <br>いくらかのルールを作らせていただいています。
@@ -109,10 +104,10 @@
                 <span><i><strong>第三条．サーバーサービスの停止及び変更について</strong></i></span>
                 <br>第1項.サービス停止
                 <br>以下のいずれかの事由があると判断した場合，ユーザーに事前に通知することなくサーバーの全部または一部の提供を停止または中断することができるものとします。
-                <br>- コンピュータシステムの保守点検または更新を行う場合
-                <br>- 地震，落雷，火災，停電または天災などの不可抗力により，本サービスの提供が困難となった場合
+                <br>- コンピュータの更新等を行う場合
+                <br>- 地震，落雷，火災，停電または天災などの不可抗力により，サーバーサービスの提供が困難となった場合
                 <br>- コンピュータまたは通信回線等が事故により停止した場合
-                <br>- その他，当団体が本サービスの提供が困難と判断した場合
+                <br>- その他，当サーバーがサーバーサービスの提供が困難と判断した場合
                 <br>
                 <br>第2項.サービス変更
                 <br>当サーバーは，ユーザーに通知することなく，サービス内容を変更しまたはサーバーサービスの提供を中止することができるものとします。
@@ -132,9 +127,7 @@
         <br>
         <br>
 
-        <div id="rules" class="alert alert-primary" role="alert">
-            サーバールール
-        </div>
+        <h1 id="rules">サーバールール</h1>
         <span>
             <h4>
                 ここではプレイ中に決まっていったルールなどを随時記載・更新していきます。
@@ -156,34 +149,10 @@
                 <br>
                 <br>
                 <span><i><strong>ルール２</strong></i></span>
-                <br>許可なく他人の部屋や家に入らない！
-                <br>リアルでも他人の家に入る際は許可を取りますよね？
-                <br>え...？取りますよね？？？
-                <br>ということでマイクラでも他人の家に入るときは許可を取りましょう！
                 <br>
-                <br>
-                <span><i><strong>ルール３</strong></i></span>
-                <br>公共施設は丁寧に使用する！
-                <br>ワールド内には様々な公共物があります。
-                <br>みんなが使うものなので、次に使う人が困らない使い方をしましょう！
-                <br>(例えば、公共の植林上で木を切ったら必ず苗を植えるなど)
-                <br>
-                <br>
-                <span><i><strong>ルール４</strong></i></span>
-                <br>誰がいつ入っても困らないワールドづくりを！
-                <br>と言われても想像できないと思うので、例を挙げていきます！
-                <br>⓵トラップや装置、建築をした際には所有者がわかるよう看板等を立てる
-                <br>⓶共有の施設や装置を作った際は、使い方をしっかりシェアする
-                <br>⓷みんなが使うエリア(本拠点周辺)で何か行った際には共有する
-                <br>｢ここに建物建てるから整地中です！｣
-                <br>｢ここのチェストは〇〇のためにおいてます！｣
-                <br>｢この施設はメンテ中です～復帰予定は〇〇です！｣などなど...
-                <br>これ何なの？を極力なくしていきましょう！
             </p>
         </span>
-        <div id="plugins" class="alert alert-primary" role="alert">
-            プラグイン解説
-        </div>
+        <h1 id="plugins">プラグイン解説</h1>
         <span>
             ここでは当サーバーに導入されているプラグインの
             <br>使い方を解説しています。
