--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 </tr>
                 <tr>
                     <td>/company confirm</td>
-                    <td>所属している企業から退社します</td>
+                    <td>保留中のアクションを確定します</td>
                 </tr>
                 <tr>
                     <td>/company leader [名前]</td>
